--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
 set -g default-terminal "screen-256color"
-set-option -g default-shell /bin/bash
 set -g status-keys vi
 set -g mouse on
 set -sg escape-time 0
+
+set-option -g default-shell /bin/bash
+set-option -g allow-rename off
 
 bind-key v split-window -h
 bind-key s split-window -v
