--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind e select-window -t edit
+
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
