--- a/.i3.config
+++ b/.i3.config
@@ -10,10 +10,14 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $terminal 1:terminal
+set $games 3:games
+set $browser 9:browser
+set $chats 10:chats
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Noto Mono for Powerline 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -29,14 +33,19 @@ font pango:monospace 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# start a chrome
+bindsym $mod+b exec "google-chrome-stable --app='https://google.com'"
+bindsym $mod+Shift+b exec "google-chrome-stable"
+
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return workspace $terminal
+bindsym $mod+Shift+Return exec urxvt
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+d kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+semicolon exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -93,58 +102,45 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
+bindsym $mod+1 workspace $terminal
 bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
+bindsym $mod+3 workspace $games
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+9 workspace $browser
+bindsym $mod+0 workspace $chats
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+1 move container to workspace $terminal
 bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+3 move container to workspace $games
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+9 move container to workspace $browser
+bindsym $mod+Shift+0 move container to workspace $chats
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec systemctl suspend && ~/.i3/i3lock-multimonitor/lock
-bindsym Ctrl+Mod1+l exec ~/.i3/i3lock-multimonitor/lock
+bindsym $mod+Shift+p exec poweroff
+bindsym $mod+Shift+e exec systemctl suspend && ~/.i3/scripts/i3lock
+bindsym Ctrl+Mod1+l exec ~/.i3/scripts/i3lock
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym h resize shrink width 10 px or 10 ppt
         bindsym j resize grow height 10 px or 10 ppt
         bindsym k resize shrink height 10 px or 10 ppt
         bindsym l resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
@@ -152,17 +148,65 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
+smart_gaps on
+smart_borders on
+for_window [class="^.*"] border pixel 1
+gaps inner 16
+gaps outer 16
+client.focused          #444444 #444444 #ffffff #aaaaaa
+client.focused_inactive #333333 #333333 #cccccc #292d2e
+client.unfocused        #181818 #181818 #666666 #484e50
+client.urgent           #900000 #900000 #ffffff #900000
+
+exec "setxkbmap -layout us,ru -option grp:alt_shift_toggle"
+
+bindsym --release $mod+f bar mode dock main_bar
+
 bar {
-        status_command i3status
+    output DVI-0
+    tray_output DVI-0
+    status_command $HOME/.i3/bumblebee-status/bumblebee-status -m datetime layout-xkb -p todo.file=$HOME/.notes -p datetime.format="%d-%m-%Y %H:%M:%S"
+
+    colors {
+        focused_workspace  #444444 #444444 #ffffff
+        active_workspace   #333333 #222222 #888888
+        inactive_workspace #333333 #222222 #888888
+        urgent_workspace   #900000 #900000 #ffffff
+    }
+}
+
+bar {
+    id main_bar
+    output VGA-0
+    mode hide
+    tray_output None
+    status_command $HOME/.i3/bumblebee-status/bumblebee-status -m traffic ping cpu memory disk taskwarrior apt
+
+    colors {
+        focused_workspace  #444444 #444444 #ffffff
+        active_workspace   #333333 #222222 #888888
+        inactive_workspace #333333 #222222 #888888
+        urgent_workspace   #900000 #900000 #ffffff
+    }
 }
 
 # default screen layout
-exec "konsole -e ~/.screenlayout/main.sh"
-
-# keyboard language
-exec setxkbmap -layout us,ru
-exec setxkbmap -option 'grp:alt_shift_toggle'
+exec --no-startup-id "~/.screenlayout/main.sh && feh --bg-fill --no-xinerama ~/.i3/wallpapers/Wallpaper-awesome.jpg"
 
 bindsym --release Ctrl+Print exec scrot -s -e 'xclip -selection clipboard -t image/png -i $n && mv $n ~/Pictures'
 bindsym --release Shift+Print exec scrot -u -e 'xclip -selection clipboard -t image/png -i $n && mv $n ~/Pictures'
 bindsym --release Print exec scrot -e 'xclip -selection clipboard -t image/png -i $n && mv $n ~/Pictures'
+
+bindsym XF86AudioRaiseVolume exec "pactl set-sink-mute 0 false ; pactl set-sink-volume 0 +5%"
+bindsym XF86AudioLowerVolume exec "pactl set-sink-mute 0 false ; pactl set-sink-volume 0 -5%"
+bindsym XF86AudioMute exec "pactl set-sink-mute 0 toggle"
+
+workspace $terminal output VGA-0
+workspace $browser output VGA-0
+workspace $games output VGA-0
+workspace $chats output DVI-0
+
+for_window [window_role="browser"] exec "i3-msg move container to workspace $browser && i3-msg workspace $browser"
+
+exec compton -b
