--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,21 @@
+set-option -g default-shell /bin/zsh
+set-option -g allow-rename off
+
 set -g default-terminal "screen-256color"
-set -g status-keys vi
-set -g mouse on
 set -sg escape-time 0
 
-set-option -g default-shell /bin/bash
-set-option -g allow-rename off
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+set -g mode-keys vi
+set-window-option -g mode-keys vi
+unbind [
+bind-key -n F2 copy-mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send -X begin-selection\; send -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection\; run 'tmux save - | xclip -selection clipboard > /dev/null'
+bind-key -T copy-mode-vi escape send-keys -X cancel
 
 bind-key v split-window -h
 bind-key s split-window -v
