--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
-set-option -g default-shell /bin/zsh
-set-option -g allow-rename off
+#set-option -g allow-rename off
 
 set -g default-terminal "screen-256color"
 set -sg escape-time 0
@@ -12,13 +11,13 @@ set -g mode-keys vi
 set-window-option -g mode-keys vi
 unbind [
 bind-key -n F2 copy-mode
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi 'C-v' send -X begin-selection\; send -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection\; run 'tmux save - | xclip -selection clipboard > /dev/null'
-bind-key -T copy-mode-vi escape send-keys -X cancel
+#   bind-key -T copy-mode-vi v send-keys -X begin-selection
+#   bind-key -T copy-mode-vi 'C-v' send -X begin-selection\; send -X rectangle-toggle
+#   bind-key -T copy-mode-vi y send-keys -X copy-selection\; run 'tmux save - | xclip -selection clipboard > /dev/null'
+#   bind-key -T copy-mode-vi escape send-keys -X cancel
 
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key V split-window -h
+bind-key S split-window -v
 
 bind-key H resize-pane -L 5
 bind-key J resize-pane -D 5
