--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,25 +16,20 @@ bind-key -n F2 copy-mode
 #   bind-key -T copy-mode-vi y send-keys -X copy-selection\; run 'tmux save - | xclip -selection clipboard > /dev/null'
 #   bind-key -T copy-mode-vi escape send-keys -X cancel
 
-bind-key V split-window -h
-bind-key S split-window -v
+bind-key v split-window -h
+bind-key h split-window -v
 
-bind-key H resize-pane -L 5
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key L resize-pane -R 5
-
-bind-key M-h resize-pane -L
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-l resize-pane -R
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind e select-window -t edit
+bind -n M-e select-window -t edit
+bind -n M-0 select-window -t 0
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
@@ -43,5 +38,7 @@ bind -n M-l select-pane -R
 
 bind -n M-n next-window
 bind -n M-b previous-window
+
+bind -n M-q kill-pane
 
 bind-key R source-file ~/.tmux.conf
