--- a/.i3config
+++ b/.i3config
@@ -30,7 +30,7 @@ font pango:monospace 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -111,7 +111,14 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# i3 gaps
+smart_gaps on
+smart_borders on
+gaps inner 16
+gaps outer 16
+
 for_window [class="^.*"] border pixel 2
+
 client.focused          #444444 #444444 #ffffff #aaaaaa
 client.focused_inactive #333333 #333333 #cccccc #292d2e
 client.unfocused        #181818 #181818 #666666 #484e50
@@ -140,9 +147,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    position top
     mode hide
-    status_command $HOME/.i3/bumblebee-status/bumblebee-status -m datetime battery
+    status_command $HOME/.i3/bumblebee-status/bumblebee-status -m time battery
     colors {
         focused_workspace  #444444 #444444 #ffffff
         active_workspace   #333333 #222222 #888888
@@ -151,14 +157,23 @@ bar {
     }
 }
 
-exec_always "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle"
+exec_always --no-startup-id "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle"
 
-exec_always --no-startup-id "feh --bg-fill ~/Pictures/backgrounds/ubuntu-dark-wallpaper.jpg"
+exec_always --no-startup-id "feh --bg-fill ~/Pictures/backgrounds/arch-dark-wallpaper.jpg"
 
-bindsym --release Print exec "gnome-screenshot"
-bindsym --release Ctrl+Print exec "gnome-screenshot --clipboard"
-bindsym --release Shift+Print exec "gnome-screenshot --area"
-bindsym --release Ctrl+Shift+Print exec "gnome-screenshot --area --clipboard"
+# sound volume
+bindsym XF86AudioRaiseVolume exec "pactl set-sink-mute 0 false ; pactl set-sink-volume 0 +5%"
+bindsym XF86AudioLowerVolume exec "pactl set-sink-mute 0 false ; pactl set-sink-volume 0 -5%"
+bindsym XF86AudioMute exec "pactl set-sink-mute 0 toggle"
 
+# screenshots
+bindsym --release Ctrl+Print exec scrot -s -e 'xclip -selection clipboard -t image/png -i $n && mv $n ~/Pictures/screenshots'
+bindsym --release Shift+Print exec scrot -u -e 'xclip -selection clipboard -t image/png -i $n && mv $n ~/Pictures/screenshots'
+bindsym --release Print exec scrot -e 'xclip -selection clipboard -t image/png -i $n && mv $n ~/Picture/screenshots'
+
+# screen brightness
 bindsym XF86MonBrightnessUp exec "xbacklight -inc 5"
 bindsym XF86MonBrightnessDown exec "xbacklight -dec 5"
+
+# enable animations
+exec --no-startup-id "compton -b"
